--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -64,27 +64,37 @@
     margin-top: .75rem;
 
     ul {
-      display: flex; // or grid
-      row-gap: 1rem; // adjust spacing
-      list-style: none; // optional
+      // display: flex; // or grid
+      // row-gap: 1rem; // adjust spacing
+      // list-style: none; // optional
+      //
+      // list-style-position: inside;
+      //
+      // padding: 0;
+      // flex-direction: column;
+      //
 
-      list-style-position: inside;
-
-      padding: 0;
-      flex-direction: column;
-
-
-      li::marker {
-        content: "⊹₊ ";
-        color: lightpink; // optional color for the x
-        font-weight: bold;
-      }
+      // BUG: apparently this isn't working?
+      // li::marker {
+      //   // content: "⊹₊ ";
+      //   content: "x";
+      //   color: lightpink; // optional color for the x
+      //   font-weight: bold;
+      // }
 
       li {
 
         display: flex;
         column-gap: .5rem;
         width: fit-content;
+        justify-content: center;
+        align-items: center;
+
+        &::before {
+          content: "⊹₊ ";
+          color: lightpink;
+          font-weight: bold;
+        }
 
         a {
           color: white;
